<resources>
    <string name="app_name">MobileTimesheet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_all">showAll</string>
    <string name="title_activity_login">login</string>
    <string name="btnRegister">Register</string>
    <string name="btnNewView">Search Database</string>
    <string name="usernameTag">Username</string>
    <string name="passwordTag">Password</string>
    <string name="emailTag">Email</string>
    <string name="empId">Employee ID</string>
    <string name="btnLogin">Login </string>
    <string name="btnTimeSheet"> Submit Timesheet </string>
    <string name="btnLinkToLogin">Proceed to Login</string>
    <string name="btnLinkToRegister">Not Signed up? Click to Register </string>
    <string name="userHint">enter username</string>
    <string name="passHint">enter password</string>
    <string name="emailHint">enter email address</string>
    <string name="idHint">enter employee id number</string>
    <string name="logJourney">Log a Journey</string>
    <string name="google_api_key">AIzaSyDevFA_yVFsdZaZfpq1ydk24R1DnrBLXq4</string>

    <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>
    <string name="feedbackbutton">Log a Journey</string>
    <string name="feedbackresponse">response</string>
    <string name="feedbackbody">feedback</string>
    <string name="feedbackemail">email</string>
    <string name="feedbackname">name</string>
    <string name="feedbacktitle">title</string>
    <string name="title_activity_journey">JourneyActivity</string>
    <string name="startString">Enter Start Address</string>
    <string name="startAddressHint"></string>
    <string name="finishAddress">Finish Address</string>
    <string name="addressBtnTxt">Get Distance</string>
    <string name="addItem">Add Expense</string>
    <string name="title_activity_time_sheet">TimeSheet</string>
    <string name="title_activity_view_time_sheet">ViewTimeSheet</string>
    <string name="title_activity_send_time_sheet">SendTimeSheet</string>
    <string name="addToDatabase">Add to Database</string>
    <string name="distanceTV">Distance Km\'s is</string>
    <string name="title_activity_auto_journey">AutoJourney</string>
    <string name="title_activity_auto_complete">AutoComplete</string>
    <string name="reset">Reset</string>
    <string name="resetBtn">Reset</string>
    <string name="title_activity_view_weekly">ViewWeekly</string>
    <string name="textID">ID</string>
    <string name="editTextBasic">Basic</string>
    <string name="editTextOT">Overtime</string>
    <string name="editTextMeals">Meals</string>
    <string name="editTextDate">Date</string>
    <string name="editTextStatus">Status</string>
    <string name="editTextDateRange">Search Date Range</string>
    <string name="editBtnSearch">Search</string>
    <string name="txtLogOut">Log-out</string>
    <string name="txtMileageCalc">Calculate Mileage</string>
    <string name="txtManageHrs">Manage Hours</string>
    <string name="txtViewJourneys">View Journeys</string>
    <string name="txtWeekTS">Weekly Timesheets</string>
    <string name="txtAddToTS">Add to Timesheet?</string>
    <string name="txtDistKM">Distance in Kilometers</string>
    <string name="txtDest">Destination</string>
    <string name="hintStartLoc">Start Location</string>
    <string name="distKM">Distance in Kilometers</string>
    <string name="txtManual">Input Manually?</string>
    <string name="txtStartJ">Start Journey!</string>
    <string name="txtStopJ">Stop Journey</string>
    <string name="txtDisplay">Display</string>
    <string name="txtSearchDate">Search by Date</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtNext">Next</string>
    <string name="txtSave">Save</string>
    <string name="txtPrev">Previous</string>
    <string name="txtDate">Date</string>
    <string name="txtMealAll">Meal Allowance</string>
    <string name="txtOThrs">Overtime Hours</string>
    <string name="txtBasicHrs">Basic Hours</string>
    <string name="txtDay">day</string>

</resources>
