<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/grad_two"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="myapps.myvolley.ViewWeekly"
    tools:showIn="@layout/activity_view_weekly">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/app_name"
        android:id="@+id/textDay"
        android:textSize="38sp"
        android:textColor="#ffffffff" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/app_name"
        android:id="@+id/textDate"
        android:textSize="38sp"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_border"
        android:singleLine="true"
        android:text="@string/textID"
        android:id="@+id/textViewId" />



    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_border"
        android:text="@string/editTextBasic"
        android:id="@+id/textViewBasic" />



    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_border"
        android:text="@string/editTextOT"
        android:id="@+id/textViewOverTime" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_border"
        android:text="@string/editTextMeals"
        android:id="@+id/textViewMeals" />





    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_border"
        android:text="@string/editTextDate"
        android:id="@+id/textViewDate" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_border"
        android:text="@string/editTextStatus"
        android:id="@+id/textViewStatus" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editTextDateRange"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:id="@+id/dateRangeTV" />





    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Start Date"
            android:id="@+id/startTV"
            android:gravity="center"
            android:layout_weight="0.50"

            android:textSize="17sp"/>




        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="End Date"
            android:id="@+id/endTV"
            android:gravity="center"
            android:layout_weight="0.50"
            android:textColor="#272727"
            android:textSize="17sp"/>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editBtnSearch"
        android:id="@+id/btnSearch" />

</LinearLayout>



