<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:textColor="#ffffffff"
        android:id="@+id/textView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addItem"
        android:id="@+id/buttonAddItem" />

    <Button
        android:id="@+id/buttonLogJourney"
        android:layout_height="wrap_content"
        android:text="@string/logJourney"
        android:onClick="changeLogJourney"
        android:layout_width="fill_parent">
    </Button>


    </LinearLayout>
