<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:windowActionBar="false"
    android:layout_height="fill_parent"
    android:background="@drawable/grad_two"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageButton
        android:layout_width="wrap_content"
        android:id="@+id/headImg"
        android:layout_height="wrap_content"
        android:background="@drawable/color_time"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/app_name"
        android:layout_below="@+id/headImg"
        android:id="@+id/headTV"
        android:textSize="30sp"
        android:textColor="#ffffffff" />


    <EditText
        android:id="@+id/autocomplete_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="5dp"
        android:hint="Start Location"
        android:layout_below="@+id/headTV"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_border"
        android:drawablePadding="9dp"
        android:textColor="@android:color/primary_text_light"
        android:textSize="21sp"
        android:ems="10"/>
    <EditText
        android:id="@+id/autocomplete_places_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="Destination"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border"
        android:drawablePadding="18dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/primary_text_light"
        android:layout_below="@+id/autocomplete_places"
        android:textSize="21sp"
        android:ems="10"/>
    <ImageView
        android:id="@+id/cross"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="26dp"
        android:layout_marginRight="20dp"
        />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/autocomplete_places_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTwo"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/autocomplete_places_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressBtnTxt"
        android:layout_marginTop="20dp"
        android:id="@+id/getDistBtn"
        android:layout_below="@+id/autocomplete_places_two"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:singleLine="true"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Distance"
        android:layout_below="@+id/getDistBtn"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:id="@+id/distTV" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Add to Timesheet?"
        android:layout_below="@+id/distTV"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:id="@+id/addTV" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetBtn"

        android:id="@+id/resetBtn"
        android:layout_below="@+id/addTV"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:singleLine="true"/>

</RelativeLayout>
    </ScrollView>